--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     rel="stylesheet" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -29,25 +28,23 @@
           <li class="item"><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <div class="auth-contacts">
-        <ul class="auth-nav list">
-          <li class="item auth-link">
-            <a href="mailto:info@devstudio.com" class="link auth-link">
-              <svg class="auth-symbol widgh=" 16px" height="12px"">
-                          <use href=" ./images/symbol.svg#icon-envelope">
-                </use>
-              </svg>info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link auth-link">
-              <svg class="auth-symbol widgh=" 10px" height="16px"">
+      <ul class="auth-nav list">
+        <li class="item auth-link">
+          <a href="mailto:info@devstudio.com" class="link auth-link">
+            <svg class="auth-symbol" height="12px" width=" 16px">
+              <use href=" ./images/symbol.svg#icon-envelope">
+              </use>
+            </svg>info@devstudio.com</a>
+        </li>
+        <li class="item">
+          <a href="tel:+380961111111" class="link auth-link">
+            <svg class="auth-symbol" width="10px" height="16px">
               <use href=" ./images/symbol.svg#icon-smartphone">
-                </use>
-              </svg>+38 096 111 11 11
-            </a>
-          </li>
-        </ul>
-      </div>
+              </use>
+            </svg>+38 096 111 11 11
+          </a>
+        </li>
+      </ul>
     </div>
   </header>
   <main>
@@ -65,7 +62,7 @@
         <ul class="hero-list list">
           <li class="benefits-item">
             <div class="benefits-block">
-              <svg class="benefits-icon" widgh="70px" height="70px">
+              <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-antenna">
 
                 </use>
@@ -79,7 +76,7 @@
           </li>
           <li class="benefits-item">
             <div class="benefits-block">
-              <svg class="benefits-icon" widgh="70px" height="70px">
+              <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-clock">
 
                 </use>
@@ -92,7 +89,7 @@
           </li>
           <li class="benefits-item">
             <div class="benefits-block">
-              <svg class="benefits-icon" widgh="70px" height="70px">
+              <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-diagram">
 
                 </use>
@@ -105,7 +102,7 @@
           </li>
           <li class="benefits-item">
             <div class="benefits-block">
-              <svg class="benefits-icon" widgh="70px" height="70px">
+              <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-astronaut">
 
                 </use>
@@ -302,53 +299,54 @@
         </ul>
       </div>
     </section>
-    <section class="clients container">
-      <h2 class="section-title">Постійні клієнти</h2>
-      <ul class="clients-list list">
-        <li class="clients-item">
-          <a href="" class="clients-link link">
-            <svg class="clients-logo width=" 106px" height="60px"">
-              <use href=" ./images/symbol.svg#icon-logo-1">
-              </use>
-            </svg>
-          </a>
-        </li>
-        <li class="clients-item"> <a href="" class="clients-link link">
-            <svg class="clients-logo width=" 106px" height="60px"">
-              <use href=" ./images/symbol.svg#icon-logo-2">
-              </use>
-            </svg>
-          </a></a></li>
-        <li class="clients-item"> <a href="" class="clients-link link">
-            <svg class="clients-logo width=" 106px" height="60px"">
-              <use href=" ./images/symbol.svg#icon-logo-3">
-              </use>
-            </svg>
-          </a></li>
-        <li class="clients-item"> <a href="" class="clients-link link">
-            <svg class="clients-logo width=" 106px" height="60px"">
-              <use href=" ./images/symbol.svg#icon-logo-4">
-              </use>
-            </svg>
-          </a></li>
-        <li class="clients-item"> <a href="" class="clients-link link">
-            <svg class="clients-logo width=" 106px" height="60px"">
-              <use href=" ./images/symbol.svg#icon-logo-5">
-              </use>
-            </svg>
-          </a></li>
-        <li class="clients-item"> <a href="" class="clients-link link">
-            <svg class="clients-logo width=" 106px" height="60px"">
-              <use href=" ./images/symbol.svg#icon-logo-6">
-              </use>
-            </svg>
-          </a></li>
-      </ul>
-      <div class="conteiner"></div>
+    <section class="clients ">
+      <div class="container">
+        <h2 class="section-title">Постійні клієнти</h2>
+        <ul class="clients-list list">
+          <li class="clients-item">
+            <a href="" class="clients-link link">
+              <svg class="clients-logo" width=" 106px" height="60px">
+                <use href=" ./images/symbol.svg#icon-logo-1">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item"> <a href="" class="clients-link link">
+              <svg class="clients-logo" width=" 106px" height="60px">
+                <use href=" ./images/symbol.svg#icon-logo-2">
+                </use>
+              </svg>
+            </a></a></li>
+          <li class="clients-item"> <a href="" class="clients-link link">
+              <svg class="clients-logo" width=" 106px" height="60px">
+                <use href=" ./images/symbol.svg#icon-logo-3">
+                </use>
+              </svg>
+            </a></li>
+          <li class="clients-item"> <a href="" class="clients-link link">
+              <svg class="clients-logo" width=" 106px" height="60px">
+                <use href=" ./images/symbol.svg#icon-logo-4">
+                </use>
+              </svg>
+            </a></li>
+          <li class="clients-item"> <a href="" class="clients-link link">
+              <svg class="clients-logo" width=" 106px" height="60px">
+                <use href=" ./images/symbol.svg#icon-logo-5">
+                </use>
+              </svg>
+            </a></li>
+          <li class="clients-item"> <a href="" class="clients-link link">
+              <svg class="clients-logo" width=" 106px" height="60px">
+                <use href=" ./images/symbol.svg#icon-logo-6">
+                </use>
+              </svg>
+            </a></li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="conteiner-div">
+    <div class="container">
       <div class="conteiner-logo">
         <a href="./index.html" class="logo link">Web<span class="footer-logo">Studio</span> </a>
         <address>
@@ -367,7 +365,7 @@
         </address>
       </div>
       <div>
-        <h2 class="footer-title">приєднуйтесь</h2>
+        <p class="footer-title">приєднуйтесь</p>
         <ul class="team-soc-list list">
           <li class="team-soc-item">
             <a href="" class="team-soc-link link">
