--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             <div class="benefits-block">
               <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-antenna">
-
                 </use>
               </svg>
             </div>
@@ -78,7 +77,6 @@
             <div class="benefits-block">
               <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-clock">
-
                 </use>
               </svg>
             </div>
@@ -91,7 +89,6 @@
             <div class="benefits-block">
               <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-diagram">
-
                 </use>
               </svg>
             </div>
@@ -104,7 +101,6 @@
             <div class="benefits-block">
               <svg class="benefits-icon" width="70px" height="70px">
                 <use href="./images/symbol.svg#icon-astronaut">
-
                 </use>
               </svg>
             </div>
@@ -146,7 +142,7 @@
               <ul class="team-soc-list list">
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-instagram">
 
                       </use>
@@ -155,21 +151,21 @@
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -186,7 +182,7 @@
               <ul class="team-soc-list list">
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-instagram">
 
                       </use>
@@ -195,21 +191,21 @@
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -226,7 +222,7 @@
               <ul class="team-soc-list list">
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-instagram">
                       </use>
                     </svg>
@@ -234,21 +230,21 @@
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -265,7 +261,7 @@
               <ul class="team-soc-list list">
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-instagram">
                       </use>
                     </svg>
@@ -273,21 +269,21 @@
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20px" hight="20px">
+                    <svg class="team-soc-icon" width="20px" height="20px">
                       <use href="./images/symbol.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -366,32 +362,32 @@
       </div>
       <div>
         <p class="footer-title">приєднуйтесь</p>
-        <ul class="team-soc-list list">
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+        <ul class="footer-soc-list list">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-instagram">
                 </use>
               </svg>
             </a>
           </li>
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
