--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
         <a href="./index.html" class="logo link">Web<span class="logo-studio">Studio</span> </a>
         <!-- Навигація сайта -->
         <ul class="site-nav list">
-          <li class="item"><a href="./index.html" class="link current">Студія</a></li>
-          <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li class="item"><a href="./index.html" class="link">Студія</a></li>
+          <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
           <li class="item"><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
@@ -65,7 +65,8 @@
         <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="portfolio-list list">
           <li class="flex-element">
-            <img src="./images/portfolio-img-1.jpg" alt="фото з зображенням ноутбуку" width="370" />
+            <img src="./images/portfolio-img-1.jpg" alt="фото з зображенням ноутбуку" width="370"
+              class="portfolio-link" />
 
             <div class="portfolio-item">
               <h2 class="portfolio-title">Технокряк</h2>
@@ -73,56 +74,57 @@
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-2.jpg" alt="фото баскетболист кидає м'яч" width="370" />
+            <img src="./images/portfolio-img-2.jpg" alt="фото баскетболист кидає м'яч" width="370"
+              class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
               <p class="portfolio-subtitle">Дизайн</p>
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-3.jpg" alt="логотип siafood" width="370" />
+            <img src="./images/portfolio-img-3.jpg" alt="логотип siafood" width="370" class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Ресторан Seafood</h2>
               <p class="portfolio-subtitle">Додаток</p>
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-4.jpg" alt="фото навушників" width="370" />
+            <img src="./images/portfolio-img-4.jpg" alt="фото навушників" width="370" class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Проєкт Prime</h2>
               <p class="portfolio-subtitle">Маркетинг</p>
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-5.jpg" alt="фото упаковочних боксів" width="370" />
+            <img src="./images/portfolio-img-5.jpg" alt="фото упаковочних боксів" width="370" class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Проєкт Boxes</h2>
               <p class="portfolio-subtitle">Додаток</p>
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-6.jpg" alt="фото комп'ютера Imac" width="370" />
+            <img src="./images/portfolio-img-6.jpg" alt="фото комп'ютера Imac" width="370" class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-subtitle">Веб-сайт</p>
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-7.jpg" alt="" width="370" />
+            <img src="./images/portfolio-img-7.jpg" alt="" width="370" class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Видання Limited Edition</h2>
               <p class="portfolio-subtitle">Дизайн</p>
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-8.jpg" alt="" width="370" />
+            <img src="./images/portfolio-img-8.jpg" alt="" width="370" class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Проєкт LAB</h2>
               <p class="portfolio-subtitle">Маркетинг</p>
             </div>
           </li>
           <li class="flex-element">
-            <img src="./images/portfolio-img-9.jpg" alt="" width="370" />
+            <img src="./images/portfolio-img-9.jpg" alt="" width="370" class="portfolio-link" />
             <div class="portfolio-item">
               <h2 class="portfolio-title">Growing Business</h2>
               <p class="portfolio-subtitle">Додаток</p>
@@ -153,32 +155,32 @@
       </div>
       <div>
         <p class="footer-title">приєднуйтесь</p>
-        <ul class="team-soc-list list">
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+        <ul class="footer-soc-list list">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-instagram">
                 </use>
               </svg>
             </a>
           </li>
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="team-soc-item">
-            <a href="" class="team-soc-link link">
-              <svg class="team-soc-icon" width="20px" hight="20px">
+          <li class="footer-soc-item">
+            <a href="" class="footer-soc-link link">
+              <svg class="footer-soc-icon" width="20px" height="20px">
                 <use href="./images/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
